# supermarket-comparer-rs

./: .dockerignore  .sqlxrc  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  env.example
migrations/: 20260414184850_first.sql
src/: lib.rs  main.rs
src/db/: connection.rs  mod.rs  schema.rs
src/modules/: mod.rs
src/modules/categories/: controller.rs  mod.rs  repository.rs  repository_impl.rs  service.rs  tests.rs  types.rs
src/modules/categories/test/: create.rs  delete.rs  mod.rs  read.rs  search.rs  test_helper.rs
src/modules/products/: controller.rs  mod.rs  repository.rs  repository_impl.rs  service.rs  tests.rs  types.rs
src/shared/: mod.rs
src/shared/core/: api_response.rs  category_error.rs  error.rs  mod.rs  result.rs  uuid.rs
src/shared/entities/: base.rs  category.rs  mod.rs  product.rs
