[package]
name = "supermarket-comparer-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
async-trait = "0.1"
dotenvy = "0.15"

[dev-dependencies]
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "chrono",
  "uuid",
  "migrate",
] }

[lib]
path = "src/lib.rs"

